--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
     <div class="container ">
       <div class="hero-text">
         <span class="hero-section"></span>
-        <h1>Astro de Villa Sonora. Liga de Baseball infantil. Humberto RASPO Grajeda.</h1>
+        <h1>Astros de Villa Sonora. Equipo de Baseball infantil.</h1>
         <p>Hero is a multipurpose Hugo theme with fullscreen hero images and fullwidth sections. It contains content types for a business or portfolio site.</p>
       </div>
       <div class="hero-down">
