--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
       <div class="hero-text">
         <span class="hero-section"></span>
         <h1>Astros de Villa Sonora. Equipo de Baseball infantil.</h1>
-        <p>Hero is a multipurpose Hugo theme with fullscreen hero images and fullwidth sections. It contains content types for a business or portfolio site.</p>
+        <p>Es un Equipo de la liga de baseball infantil HUmberto &#34;RASPO&#34; grajeda.</p>
       </div>
       <div class="hero-down">
         <a href="#home">
