--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
 <meta name="description" content="El equipo esta formado por un grupo de muchachos talentosos que son una muestra de la cantera Sonorense de futuros peloteros y una veradera muestra de pasión por este bonito deporte." />
-<meta property="og:title" content="Hugo Hero Theme" />
+<meta property="og:title" content="Equipo" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://astrosvillasonora.netlify.com" />
 <meta property="og:image" content="https://raw.githubusercontent.com/JugglerX/hugo-hero-theme/master/images/tn.png" />
@@ -121,8 +121,8 @@
     <div class="container ">
       <div class="hero-text">
         <span class="hero-section"></span>
-        <h1>Astros de Villa Sonora. Equipo de Baseball infantil.</h1>
-        <p>Es un Equipo de la liga de baseball infantil HUmberto &#34;RASPO&#34; grajeda.</p>
+        <h1>Astros de Villa Sonora.</h1>
+        <p>Es un equipo de la liga de baseball infantil Humberto &#34;RASPO&#34; grajeda.</p>
       </div>
       <div class="hero-down">
         <a href="#home">
