--- a/public/work/fall-plaza/index.html
+++ b/public/work/fall-plaza/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Fall Plaza - Hugo Hero Theme</title>
+  <title>Fall Plaza - Astros</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="/favicon.png">
@@ -174,7 +174,7 @@ esse iam feres mortis Plurima.</p>
           <ul class="footer-menu">
             <li><a href="/">Home</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li class="copyright">© 2019 Hugo Hero Theme</li>
+            <li class="copyright">© 2019 Astros</li>
           </ul>
         </div>
       </div>
