--- a/public/history/index.html
+++ b/public/history/index.html
@@ -184,9 +184,9 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Phone: </strong>XXXX XXX XXX</li>
-            <li><strong>Email: </strong><a href="mailto:zerostaticthemes@gmail.com">
-                zerostaticthemes@gmail.com</a></li>
+            <li><strong>Phone: </strong>631 XXX XXX</li>
+            <li><strong>Email: </strong><a href="mailto:jlmanzanaresrivera@gmail.com">
+                jlmanzanaresrivera@gmail.com</a></li>
           </ul>
           <ul>
             <li class="zerostatic"><a href="https://www.zerostatic.io">www.zerostatic.io</a></li>
