--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -116,7 +116,11 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-8">
-      <p>We offer a free consultation for all new clients.</p>
+      <p>Acercate  a nuestro equipo. Invitamos a niños desde los 10 años.  La categoría del equipo que participa en la Liga de <em>La carretera</em> de Humberto <strong>Raspo</strong> Grajeda es 11 y 12.</p>
+
+<p>Recbimos a jugadores  desde los 10 años y  pueden participar en los entrenamientos.</p>
+
+<p>El manejador del Equipo es <strong>Memo</strong>, contáctanos en el <strong>Parque Villa Sonora</strong> Martes y Viernes de 4 a 6 pm.</p>
 
       <ul>
         <li><strong>Phone: </strong>631 XXX XXX</li>
