--- a/public/juegos/index.html
+++ b/public/juegos/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Services - Astros</title>
+  <title>Juegos - Astros</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="/favicon.png">
@@ -108,7 +108,7 @@
 <div class="container pt-10 pb-6">
   <div class="row">
     <div class="col-12">
-      <h1 class="title-1 black">Services</h1>
+      <h1 class="title-1 black">Juegos</h1>
       
     </div>
   </div>
