--- a/public/index.html
+++ b/public/index.html
@@ -145,10 +145,12 @@
   <div class="container pt-17 pb-17">
     <div class="row">
       <div class="col-12 col-md-6 offset-md-6">
-        <h2 class="text-primary text-capitalize">We Help Business Grow</h2>
-        <p><p>Lorem ipsum dolor sit amet, et essent mediocritatem quo, choro volumus oporteat an mei. Numquam dolores mel eu, mea docendi omittantur et, mea ea duis erat. Elit melius cu ius. Per ex novum tantas putant, ei his nullam aliquam apeirian. Aeterno quaestio constituto sea an, no eum intellegat assueverit.</p>
+        <h2 class="text-primary text-capitalize">Actitud ganadora</h2>
+        <p><p>Somos un equipo en la categoría 11-12 años que competimos en la liga de La carretera y ponemos en práctica los valores de baseball infantil: Carácter Lealtad y Coraje.</p>
+
+<p>Un deporte con disciplina y mucha, mucha emoción!!</p>
 </p>
-        <a class="button" href="/work">Our Work</a>
+        <a class="button" href="/work">El equipo</a>
       </div>
     </div>
   </div>
