--- a/public/index.html
+++ b/public/index.html
@@ -165,8 +165,8 @@
   <div class="container pt-8 pb-8 pb-md-12 pt-md-12">
     <div class="row justify-content-center">
       <div class="col-12 col-md-8 text-center text-white">
-        <h2>Our Difference</h2>
-        <p><p>Lorem ipsum dolor sit amet, et essent mediocritatem quo, choro volumus oporteat an mei. ipsum dolor sit amet, et essent mediocritatem quo,</p>
+        <h2>Pasión</h2>
+        <p><p>Nuestro equipo compite contra los equipos de la liga y participa también en competencias con otras ligas en el estado contra equipos de ligas en la region de Hermosillo.</p>
 </p>
         <a class="button button-white" href="/about">About Us</a>
       </div>
