--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
         <h2>Pasión</h2>
         <p><p>Nuestro equipo compite contra los equipos de la liga y participa también en competencias con otras ligas en el estado contra equipos de ligas en la region de Hermosillo.</p>
 </p>
-        <a class="button button-white" href="/about">About Us</a>
+        <a class="button button-white" href="/about">Nustra história</a>
       </div>
     </div>
   </div>
