--- a/public/index.html
+++ b/public/index.html
@@ -166,9 +166,9 @@
     <div class="row justify-content-center">
       <div class="col-12 col-md-8 text-center text-white">
         <h2>Pasión</h2>
-        <p><p>Nuestro equipo compite contra los equipos de la liga y participa también en competencias con otras ligas en el estado contra equipos de ligas en la region de Hermosillo.</p>
+        <p><p>Nuestro equipo compite contra los equipos de la liga y participa también en competencias con otras ligas en el estado como los equipos de ligas en la región de Hermosillo.</p>
 </p>
-        <a class="button button-white" href="/about">Nustra história</a>
+        <a class="button button-white" href="/about">Nuestra história</a>
       </div>
     </div>
   </div>
