--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
 
 
 
-<div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('/images/kevin-bhagat-461952-unsplash.jpg');">
+<div id="home" class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('/images/gunate2.jpg');">
   <div class="container pt-17 pb-17">
     <div class="row">
       <div class="col-12 col-md-6 offset-md-6">
